--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         // 画像パスの配列を動的に生成
         const imagePaths = [];
         for (let i = 1; i <= 12; i++) {
-            imagePaths.push(`images/image${i}.jpeg`);
+            imagePaths.push(`images/image${i}.JPG`);
         }
 
         // 画像を切り替える間隔（ミリ秒）
